# LumOS

./: .env.example  .gitignore  COMPLETE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  INSTALL.md  LICENSE  README.md  create_all_files.sh  package.json  vercel.json
backend/: Cargo.toml  render.yaml
backend/lumos-engine/: index.cjs  package.json
backend/lumos-engine/examples/: hello.lumos
backend/lumos-engine/src/: compiler.js  evaluator.js  index.js  lexer.js  parser.js
backend/lumos-engine/src/cli/: fileRunner.js  repl.js
backend/lumos-engine/src/core/: compiler.js  evaluator.js  lexer.js  parser.js  runtime.js
backend/src/: auth.rs  database.rs  executor.rs  lumos.rs  main.rs  network.rs
database/: schema.sql
database/migrations/: 001_initial.sql
docs/: API.md  DEPLOYMENT.md  SECURITY.md
frontend/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css
frontend/pages/: page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DataAnalytics.tsx  Desktop.tsx  FileExplorer.tsx  LumosEditor.tsx  NetworkTools.tsx  SystemMonitor.tsx  Terminal.tsx  Window.tsx
frontend/src/lib/: api.ts  supabase.ts  utils.ts
frontend/src/types/: index.ts
root/: database_schema.sql
