[package]
name = "lumos_backend"
version = "2.1.0"
edition = "2021"
authors = ["Hirotoshi Uchida"]
license = "MIT"
description = "LumOS Backend Server with Polyglot Runtime Support and Lumos Language Integration"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
bcrypt = "0.15"
jsonwebtoken = "9.2"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
hostname = "0.3"
sysinfo = "0.30"
regex = "1.10"

[dev-dependencies]
actix-rt = "2.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
